@@ -11,6 +11,7 @@
 -revise sprite groupcollide for dict obj key.
 -add sprite layeredupdates.
 -add cursors get_cursor_types.
+-add canvas contextmenu handler.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
